--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                 </div>
                 <div class="welcome-image">
-                    <img src="/images/house1.jpg" alt="Car Showroom">
+                    <img src="/Images/house1.jpg" alt="Car Showroom">
                 </div>
             </div>
         </section>
@@ -264,7 +264,7 @@
 
     <footer>
         <div class="container footer-content">
-            <img src="/images/logo3.png" alt="Supreme Cars Logo" class="footer-logo">
+            <img src="/Images/logo3.png" alt="Supreme Cars Logo" class="footer-logo">
             <p>&copy; 2024 EstateVolt. All rights reserved.</p>
             <ul class="contact-info">
                 <li><i class="fas fa-phone"></i> <a href="tel:+085-2615134">085-2615134</a></li>
