--- a/index.html
+++ b/index.html
@@ -278,6 +278,6 @@
         </div>
     </footer>
 
-    <script src="/js/slideshow.js"></script>
+    <script src="/js/site.js"></script>
 </body>
 </html>
