--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
                 <li><i class="fas fa-envelope"></i> <a href="mailto:eirin@estatevolt.com">eirin@estatevolt.com</a></li>
             </ul>
             <ul class="social-media">
-                <li class="facebook"><a href="https://www.facebook.com/Supremecarsireland" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="facebook"><a href="https://www.facebook.com" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
 
-                <li class="instagram"><a href="https://www.instagram.com/supremecarsireland" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li class="instagram"><a href="https://www.instagram.com" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
             </ul>
         </div>
     </footer>
