--- a/index.html
+++ b/index.html
@@ -279,5 +279,6 @@
     </footer>
 
     <script src="/js/site.js"></script>
+    <script src="//code.tidio.co/lhowmpptocwlcby5l1j0svyd0znkolub.js" async></script>
 </body>
 </html>
